--- a/cookingoils.html
+++ b/cookingoils.html
@@ -8,12 +8,12 @@
     <style>
         /* Define the website's primary colors */
         body {
-            background-color: #dfdfd8;
+            background-color: #16433C;
         }
 
         h1,
         h2 {
-            color: #17433c;
+            color: #F1E8D9;
         }
 
         /* Define the QR code's size and position */
@@ -27,8 +27,13 @@
         /* Define the motivational line's position */
         #motivational-line {
             text-align: center;
-            margin: 20px;
+            
+    margin-right: 10px;
+    margin-bottom: 50px;
+
         }
+
+
 
         .center {
             justify-content: center;
@@ -50,6 +55,7 @@
             text-decoration: none;
             z-index: 0;
             overflow: hidden;
+            background-color: #648782;
             /* border: 1px solid #f2f8f9; */
         }
 
@@ -85,13 +91,14 @@
             align-items: center;
             justify-content: center;
             position: absolute;
-            width: 32px;
-            height: 32px;
+            width: 40px;
+            height: 45px;
             overflow: hidden;
             top: 0;
             right: 0;
-            background-color: #00838d;
+            background-color: #E8AE3D;
             border-radius: 0 4px 0 32px;
+            font-size: x-large;
         }
 
         .go-arrow {
@@ -112,7 +119,7 @@
             font-size: 17px;
             font-weight: 400;
             line-height: 20px;
-            color: #666;
+            color: #F1E8D9;
         }
 
         p.small {
@@ -122,12 +129,12 @@
 </head>
 
 <body>
-    <h1>Halfkg</h1>
-    <h2>Organic, Healthy, and Eco-Friendly Groceries</h2>
-    <div id="qr-code">
-        <img src="https://chart.googleapis.com/chart?cht=qr&amp;chl=https%3A%2F%2Fapp.halfkg.store&amp;chs=180x180&amp;choe=UTF-8&amp;chld=L|2"
-            alt="Download Halfkg's mobile app"  style="margin-left: 56px;">
-    </div>
+    <h1 style="
+    margin-left: 710px;
+">Halfkg</h1>
+    <h2 style="
+    margin-left: 510px;
+">Organic, Healthy, and Eco-Friendly Groceries</h2>
     <div id="motivational-line">
         <p>Shop smart. Live well.</p>
     </div>
