--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Halfkg - Organic, Healthy, and Eco-Friendly Groceries</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">    
     <link rel="icon" type="image/x-icon" href="./img/fav.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
