--- a/index.html
+++ b/index.html
@@ -158,6 +158,31 @@
                 </a>
             </div>
         </div>
+        <div class="footer-bg col-12">
+        <div class="container  py-4 d-flex justify-content-between">
+            <div class="d-flex gap-3">
+                <a class="f-link" href="#"> About Us</a>
+                <span>|</span>
+                <a class="f-link" href="#">Contact Us</a>
+                <span>|</span>
+                <a class="f-link" href="#">Privacy Policy</a>
+                <span>|</span>
+                <a class="f-link" href="#"> Terms & Conditions</a>
+                <span>|</span>
+                <a class="f-link" href="#">Are you a Brand?</a>
+                <span>|</span>
+                <a class="f-link" href="#">Are you a Retailer?</a>
+            </div>
+            <div class="d-flex gap-3">
+                <a class="f-link" href="#"><img src="./img/youtube.svg"></a>
+                <a class="f-link" href="#"><img src="./img/insta.svg"></a>
+                <a class="f-link" href="#"><img src="./img/twitter.svg"></a>
+            
+                
+            </div>
+
+        </div>
+    </div>
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
