--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
         <div class=" flex-wrap container  py-4 gap-3 d-flex justify-content-between">
             <div class="flex-wrap d-flex gap-3">
                 <a class="f-link" href="#"> About Us</a>
-                <span>|</span>
+                <span class="f-link">|</span>
                 <a class="f-link" href="#">Contact Us</a>
-                <span>|</span>
+                <span class="f-link">|</span>
                 <a class="f-link" href="#">Privacy Policy</a>
-                <span>|</span>
+                <span class="f-link">|</span>
                 <a class="f-link" href="#"> Terms & Conditions</a>
-                <span>|</span>
+                <span class="f-link">|</span>
                 <a class="f-link" href="#">Are you a Brand?</a>
-                <span>|</span>
+                <span class="f-link">|</span>
                 <a class="f-link" href="#">Are you a Retailer?</a>
             </div>
             <div class="d-flex gap-3">
